--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,9 +1,8 @@
-<h1>New attempt</h1>
+<h1><%= @quiz %></h1>
+
+<div>
+  <%= simple_format @quiz.pre_notice %>
+</div>
 
 <%= render "form", attempt: @attempt %>
 
-<br>
-
-<div>
-  <%= link_to "Back to attempts", attempts_path %>
-</div>
