--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -6,7 +6,7 @@
   <% @quizzes.each do |quiz| %>
     <%= render quiz %>
     <p>
-      <%= link_to "Show this quiz", quiz %>
+      <%= link_to quiz %>
     </p>
   <% end %>
 </div>
