--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -10,32 +10,32 @@
   <%= link_to 'Clone', [:clone, @quiz], data: { turbo_method: :post, turbo_confirm: "Are you sure?" }, class: "btn btn-default" %>
 </div>
 
-<table>
-  <tr>
-    <th>Score Calculation Type:</th>
-    <td><%= @quiz.calc_type.blank? ? "full_match" : @quiz.calc_type %></td>
-  </tr>
-  <tr>
-    <th>Desc:</th>
-    <td><%= simple_format @quiz.desc %></td>
-  </tr>
-  <tr>
-    <th>Pre Notice:</th>
-    <td><%= simple_format @quiz.pre_notice %></td>
-  </tr>
-  <tr>
-    <th>Random Questions:</th>
-    <td><%= @quiz.random_questions %></td>
-  </tr>
-  <tr>
-    <th>Random Options:</th>
-    <td><%= @quiz.random_options %></td>
-  </tr>
-  <tr>
-    <th>Available: </th>
-    <td><%= @quiz.available %></td>
-  </tr>
-</table>
+<% I18n.with_options(scope: 'activerecord.attributes.quiz') do |i18n| %>
+  <dl>
+    <dt><%= i18n.t :calc_type %></dt>
+    <dd><%= @quiz.calc_type.blank? ? "full_match" : @quiz.calc_type %></dd>
+  </dl>
+  <dl>
+    <dt><%= i18n.t :desc %></dt>
+    <dd><%= simple_format @quiz.desc %></dd>
+  </dl>
+  <dl>
+    <dt><%= i18n.t :pre_notice %></dt>
+    <dd><%= simple_format @quiz.pre_notice %></dd>
+  </dl>
+  <dl>
+    <dt><%= i18n.t :random_questions %></dt>
+    <dd><%= @quiz.random_questions %></dd>
+  </dl>
+  <dl>
+    <dt><%= i18n.t :random_options %></dt>
+    <dd><%= @quiz.random_options %></dd>
+  </dl>
+  <dl>
+    <dt><%= i18n.t :available %></dt>
+    <dd><%= @quiz.available %></dd>
+  </dl>
+<% end %>
 
 <h2>Questions (<%= @quiz.questions.size %>)</h2>
 
