--- a/app/views/attempts/_index.html.erb
+++ b/app/views/attempts/_index.html.erb
@@ -1,26 +1,28 @@
+
+
 <table>
-	<tr>
-		<th></th>
-		<th>Name</th>
-		<th>School</th>
-		<th>Start At</th>
-		<th>End At</th>
-		<th>Duration</th>
-		<th>Score</th>
-		<th></th>
-	</tr>
-	<% attempts.each_with_index do |attempt, idx| %>
-		<tr>
-			<td><%= idx + 1 %></td>
-			<td><%= link_to attempt.name, attempt %></td>
-			<td><%= attempt.school %></td>
-			<td><%= attempt.start_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.start_at %></td>
-			<td><%= attempt.end_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.end_at %></td>
-			<td>
-				<%= attempt.formatted_diff %>
-			</td>
-			<td><%= attempt.formatted_score %></td>
-			<td><%= link_to 'Destroy', attempt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-		</tr>
-	<% end %>
+  <tr>
+    <th></th>
+    <th>Name</th>
+    <th>School</th>
+    <th>Start At</th>
+    <th>End At</th>
+    <th>Duration</th>
+    <th>Score</th>
+    <th></th>
+  </tr>
+  <% attempts.each_with_index do |attempt, idx| %>
+    <tr>
+      <td><%= idx + 1 %></td>
+      <td><%= link_to attempt.name, attempt %></td>
+      <td><%= attempt.school %></td>
+      <td><%= attempt.start_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.start_at %></td>
+      <td><%= attempt.end_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.end_at %></td>
+      <td>
+        <%= attempt.formatted_diff %>
+      </td>
+      <td><%= attempt.formatted_score %></td>
+      <td><%= link_to 'Destroy', attempt, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
 </table>
