--- a/app/views/attempts/_attempt.html.erb
+++ b/app/views/attempts/_attempt.html.erb
@@ -1,2 +1,14 @@
-<div id="<%= dom_id attempt %>">
-</div>
+
+<%= turbo_frame_tag dom_id(attempt) do %>
+  <li id="<%= dom_id attempt %>">
+    <span><%= link_to attempt.name, attempt %></span>
+    <span><%= attempt.school %></span>
+    <span><%= attempt.start_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.start_at %></span>
+    <span><%= attempt.end_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.end_at %></span>
+    <span>
+      <%= attempt.formatted_diff %>
+    </span>
+    <span><%= attempt.formatted_score %></span>
+    <span><%= link_to 'Destroy', attempt, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %></span>
+  </li>
+<% end %>
