remove extra field from attempts

--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render 'quizzes/header', quiz: @quiz %>
 
-Participant: <%= @attempt.school %> / <%= @attempt.name %> <br/>
+Participant: <%= @attempt.name %> <br/>
 
 <%= render 'form' %>
