--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,3 +1,24 @@
 // Entry point for your Sass build
+@import "config/reset";
 
 @import "components/form";
+@import "components/table";
+@import "components/btn";
+
+* {
+  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+}
+
+body {
+  padding: 1em;
+}
+
+a {
+  color: #333;
+}
+
+textarea {
+  min-width: 360px;
+  min-height: 6em;
+}
