--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,4 +1,4 @@
-.btn {
+.btn-d {
 	display: inline-block;
 	padding: 0.375rem 0.5rem;
 	border-radius: 0.375rem;
@@ -10,4 +10,14 @@
 	cursor: pointer;
 	outline: none;
 	transition: filter 400ms, color 200ms;
+}
+
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
 }
