--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -12,7 +12,7 @@
 
 
   <div class="ingredient__actions">
-    <%= f.submit class: "btn btn--secondary" %>
+    <%= f.submit class: "btn" %>
     <%= link_to t("Cancel"),  :quizzes, class: "btn btn--light" %>
   </div>
 
