--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -2,10 +2,9 @@
 
 <h1>Quizzes</h1>
 
-<%= link_to "New quiz", new_quiz_path %>
-
-<br>
-<br>
+<div class="btn-group">
+  <%= link_to "New quiz", new_quiz_path, class: "btn" %>
+</div>
 
 <table>
   <thead>
