--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -9,6 +9,7 @@
   <%= f.input :random_questions %>
   <%= f.input :random_options %>
   <%= f.input :available %>
+  <%= f.input :anonymous %>
 
 
   <div class="ingredient__actions">
