allow attempter view the result

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -27,7 +27,7 @@
   @apply py-1 px-2 border rounded text-sm inline-flex;
 }
 .btn:hover {
-  @apply border-slate-500;
+  @apply border-slate-500 cursor-pointer;
 }
 
 
