--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -10,6 +10,7 @@
   <%= f.input :random_options %>
   <%= f.input :available %>
   <%= f.input :anonymous %>
+  <%= f.input :result_viewable %>
 
 
   <div class="ingredient__actions">
