add permalink to quizzes

--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -6,6 +6,7 @@
 </h1>
 
 <div class="btn-group">
+  <%= @quiz.permalink %>
   <%= link_to 'Edit', edit_quiz_path(@quiz), class: "btn btn-default" %>
   <%= link_to 'Clone', [:clone, @quiz], data: { turbo_method: :post, turbo_confirm: "Are you sure?" }, class: "btn btn-default" %>
   <%= link_to "Add New Question", [:new, @quiz, :question], class: "btn btn-default" %>
